Hopefully fixing the name break on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@
 }
 
 .name {
+  display: block;
   font-size: 30px;
   font-style: normal;
   font-variant: normal;
